syntax = "proto3";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string name = 1;
  string size = 2;
  string paymentMethod = 3;
  bool isPaid = 4;
  int32 maxCreamsAllowed = 5; 
  int32 maxToppingsAllowed = 6; 
  int32 price = 7; 
  int32 totalPrice = 8; 
  repeated Cream creams = 9; 
  repeated Extra extras = 10; 
  repeated Topping toppings = 11;
  string userId = 12;
}

message Cream {
  string id = 1;
  string name = 2;
  int32 price = 3;
}

message Extra {
  string id = 1;
  string name = 2;
  int32 price = 3;
}

message Topping {
  string id = 1;
  string name = 2;
  int32 price = 3;
}

message CreateOrderResponse {
  string id = 1;
}
